--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.34.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "nuqs": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
