--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_NEWS_API_KEY=NEXT_PUBLIC_NEWS_API_KEY
-NEXT_PUBLIC_NEWS_API_END_POINT=NEXT_PUBLIC_NEWS_API_END_POINT
+NEXT_PUBLIC_NEWS_API_END_POINT=https://newsapi.org/v2
